--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
 }
 
 body {
+  max-width: 960px;
+  margin: 0 auto;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
